<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_pass">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="login_existing">Login With Existing Email</string>
    <string name="Welcome">Welcome</string>
    <string name="Welcome_text">Welcome To The Shoe Store App , you can navigate and show what you want</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text">This App is very useful , you can add new shoe and show thr list of the shoes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="required_field">Please Enter the required fields</string>
</resources>
